# AutoDeploy

./: GEMINI.md  README.md  docker-compose.yml  migration-to-cloud.md  plan.md
asynctasks/: .gitignore  GEMINI.md  README.md  celerybeat-schedule.db  docker-compose.yml  main.py  plan.md  plan.txt  pyproject.toml
asynctasks/api/: auth.py  crypto.py  database.py  main.py  models.py  schemas.py
asynctasks/api/routes/: apps.py  auth.py  jobs.py  webhooks.py
asynctasks/core/: auth.py  models.py  redis.py  schemas.py  secrets_engine.py
asynctasks/dashboard/: package-lock.json  package.json
asynctasks/dashboard/src/app/: globals.css  layout.tsx  page.tsx  useJobs.ts
asynctasks/dashboard/src/app/components/: AuthGuard.tsx  CommandPalette.tsx  ConfirmationModal.tsx  DeployModal.tsx  Header.tsx  HistoryModal.tsx  LogViewer.tsx  NotificationPane.tsx  PurgeModal.tsx  SettingsModal.tsx  TopologyMap.tsx
asynctasks/dashboard/src/app/settings/: page.tsx
asynctasks/worker/: celery_app.py  tasks.py
cli/: pyproject.toml
cli/autodeploy_cli/: apps.py  config.py  context.py  logs.py  main.py
dashboard/: postcss.config.mjs  tailwind.config.ts  tsconfig.json
dashboard/src/app/: layout.tsx  page.tsx  useJobs.ts
dashboard/src/app/components/: ConfirmationModal.tsx  DeployModal.tsx  Header.tsx  HistoryModal.tsx  LogViewer.tsx  SettingsModal.tsx  TopologyMap.tsx
dashboard/src/app/settings/: page.tsx
sample-repo/: Dockerfile  main.py
sample-repo/node-app/: index.js  package.json
sample-repo/python-app/: main.py
sample-repo/static/: index.html
