[project]
name = "asynctasks"
version = "0.1.0"
description = "Brain and Engine of the AutoDeploy"
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
    "celery[redis]>=5.6.3",
    "fastapi[standard]>=0.136.1",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
]
